project2/test/test_2_r14.out
Error type 14 at line 10: accessing an undefined structure member
Error type 14 at line 12: accessing an undefined structure member
